2011-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Handler.tcc: Check for errors in the ASIO
	call-back methods.
	* src/network/Server.cpp: Likwise.

	* include/dmcs/CommandTypeFactory.h: Fix some compiler warnings.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.
	* include/dyndmcs/Instantiator.h: Likewise.
	* include/dyndmcs/InstantiateBackwardMessage.h: Likewise.
	* include/dyndmcs/ChosenCtxSortingStrategy.h: Likewise.
	* include/dyndmcs/BaseSortingStrategy.h: Likewise.

2011-01-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/solver/RelSatSolver.h: Responsible to convert relsat's
	model into BeliefState format.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/dmcs/OptDMCS.cpp: Add a remark.

	* include/solver/SatSolverFactory.h: Add query_plan.

	* include/solver/RelSatSolver.h: create guessing signature
	here. Need to rethink where to put this.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ThreadFactory.h: Add system_size.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.

	* include/mcs/ProxySignatureByLocal.h: Add ProxySignatureByLocalPtr.

	* include/loopformula/LoopFormula.h: sort the Head for set_difference.

	* include/dmcs/StreamingDMCS.h: Return query_plan.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/dmcs/StreamingForwardMessage.h: Adapt initialization of
	BeliefState in message.

2011-01-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Use libprocess.a and libsolver.a instead
	of libsatsolver.a

	* testsuite/testGraphProp.cpp: Disable for now.

	* testsuite/testClasp.cpp: Fix signature creation for
	testClaspResultSmall testcase.

	* testsuite/testBlockingClasp.cpp: Only parse 3 models.

	* testsuite/testCombination.cpp: Fix BeliefSet instantiation.
	* include/parser/ClaspResultOnlineParser.h: Likewise.

	* src/dmcs/BeliefCombination.cpp: Add more sanity checks.

	* include/generator/QueryPlanWriter.h: Include QueryPlan.h.
